# 1215-vps

./: .gitignore  .gitmodules  CLAUDE.md  README.md
.claude/: settings.json  workflow_cascades.json
.claude/agents/: archon-task-implementor.md  codebase-analyst.md  codex-delegator-execution-flow.md  codex-delegator.md  fork-delegator.md  library-researcher.md  technical-researcher.md
.claude/commands/: install-memory-compiler.md
docs/: deep-research-report.md  honcho.md  n8n, and OpenWebUI Integration Strategy.md  n8n-2.0-execute-command-and-breaking-changes.md
docs/adr/: 2026-04-20-1215-vps-decisions.md
docs/architecture/: README.md  Self-Hosted Long-Horizon Memory Architecture for Three Hermes-Backed.md  current-state.md  deployment-model.md  execution-plan.md  implementation-roadmap.md  inter-node-data-flow.md  learning-plane.md  module-env-compilation.md  network-port-map.md  node-roles.md  node-rollout-plan.md  overview.md  prototype-local-shared-core-plan.md  review-01.md  roadmap.md  runtime-flows.md  (+2 more)
nodes/: README.md
stack/: docker-compose.1215.yml  docker-compose.honcho.yml
stack/control/: pyproject.toml
stack/control/control/: cli.py  compose.py  envfile.py  honcho.py  secrets.py  supabase.py
stack/control/control/phases/: __init__.py  data_plane.py  honcho.py  preflight.py
stack/control/control1215/: cli.py  compose.py  nodes.py  topology.py
stack/control/tests/: test_cli.py  test_compose.py  test_envfile.py  test_honcho.py  test_init_env.py  test_phase1_integration.py  test_preflight.py  test_secrets.py  test_supabase.py
(+75 files in other folders)
