[project]
name = "vps-control"
version = "0.1.0"
description = "1215-VPS control plane: preflight, readiness gates, phase runners."
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[project.scripts]
start-1215 = "control.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running Docker daemon (slow)",
]
